mywork/force-app/main/default/objects/ALM_Private__c/ALM_Private__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Private ALM Settings</description>
    <label>ALM Private</label>
</CustomObject>