mywork/force-app/main/default/objects/ALM_Private__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <label>Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>