mywork/force-app/main/default/objects/ALM_Private__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <description>Consumer key for OAuth connected app.</description>
    <inlineHelpText>Consumer key for OAuth connected app.</inlineHelpText>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>