mywork/force-app/main/default/objects/ALM_Private__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <description>Consumer secret for OAuth connected app</description>
    <inlineHelpText>Consumer secret for OAuth connected app</inlineHelpText>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>