mywork/force-app/main/default/objects/ALM_Private__c/fields/CSRF_Token__c.field-meta.xml
<CustomField>
    <fullName>CSRF_Token__c</fullName>
    <description>holds a csrf token to validate the oauth redirect</description>
    <label>CSRF Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>