mywork/force-app/main/default/objects/ALM_Private__c/fields/SSH_Management_Key__c.field-meta.xml
<CustomField>
    <fullName>SSH_Management_Key__c</fullName>
    <description>A management key used to encrypt/decrypt SSH keys for internal storage.</description>
    <inlineHelpText>A management key used to encrypt/decrypt SSH keys for internal storage.</inlineHelpText>
    <label>SSH Management Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>